--- a/pom.xml
+++ b/pom.xml
@@ -45,5 +45,11 @@
             <version>3.2.10.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.15</version>
+        </dependency>
+
     </dependencies>
 </project>
